--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,4 @@
-<title>Mongoose Store</title>
+<title>AmMet Store</title>
 <link rel="stylesheet" href="/css/normalize.css" />
 <link rel="stylesheet" href="/css/skeleton.css" />
 <link rel="stylesheet" href="/css/main.css" />
