--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <div class="row nav">
   <a href="/products"
-    ><h1 id="store" class="six columns">The Ambank Store</h1></a
+    ><h1 id="store" class="six columns">The AmMet Store</h1></a
   >
   <span class="three columns">&nbsp;</span>
   <a href="/products/new"
